Save df instead of desc3

--- a/Report/02-Pre-Processing.ipynb
+++ b/Report/02-Pre-Processing.ipynb
@@ -307,18 +307,28 @@
    ],
    "source": [
     "df = pd.read_csv(\"../data/raw/allitems.csv\", encoding='iso8859_15').drop(columns = ['Unnamed: 0'])\n",
-    "reserved = df['Description'][227237]\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb94e001",
+   "metadata": {},
+   "source": [
+    "We remove all intances of \"\\*\\*\" as these vulnerabilties are highlighted to inform us that they are not valid, resons include that they are reserved for a later vulnerabitlity or are a duplicate of another CVE. We will also remove any CVEs from 2022 becuase we would be making judgements about the year based on 1 month's data which would "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "354101aa",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df = df[~df.Description.str.startswith('**')]\n",
+    "df = df[~df.Name.str.contains('2022')]\n",
     "desc = df['Description'].str.lower()"
    ]
   },
@@ -561,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "b38ea0f3",
    "metadata": {
     "scrolled": false
@@ -582,38 +592,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4444acdc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/c/.local/lib/python3.8/site-packages/numpy/lib/npyio.py:528: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  arr = np.asanyarray(arr)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.save('../data/processed/formatted1',desc3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "f0a8e61f",
+   "execution_count": 22,
+   "id": "a5248bbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "desc4 = np.load('../data/processed/formatted1.npy',allow_pickle=True)"
+    "df['Description'] = desc3\n",
+    "df.to_csv('../data/processed/formatted_df.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d27c14",
+   "id": "ce3c4e64",
    "metadata": {},
    "outputs": [],
    "source": []
