--- a/Adam_Evidence/04 - Dynamic Topic Model.ipynb
+++ b/Adam_Evidence/04 - Dynamic Topic Model.ipynb
@@ -463,44 +463,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9f4163",
+   "id": "9e57f379",
    "metadata": {},
    "source": [
-    "kf = KFold(n_splits=5, random_state=57, shuffle=True)\n",
-    "for split in kf.split(dftrain):\n",
-    "    print(\"round\")\n",
-    "    #on the training data, do a 5-fold \n",
-    "    train = dftrain.iloc[split[0]]\n",
-    "    test = dftrain.iloc[split[1]]\n",
-    "    xtrain = scale(train.iloc[:,:-2])\n",
-    "    xtest = scale(test.iloc[:,:-2])\n",
-    "    ytrain = train.iloc[:,-2]\n",
-    "    ytest = test.iloc[:,-2]\n",
-    "    #fit one of the k-folds \n",
-    "    model_1 = svm.SVC(cache_size = 1000)\n",
-    "    instance = model_1.fit(xtrain,ytrain)\n",
-    "    temp_score_1 = instance.score(xtest,ytest)\n",
-    "    #if the new model works better than previous ones then save its parameters\n",
-    "    if temp_score_1 > score_1:\n",
-    "        score_1 = temp_score_1\n",
-    "        parameters_1 = instance\n",
-    "score = 0\n",
-    "best_params = []\n",
-    "#For each model test how it does in looking at new attacks\n",
-    "for j in range(4):\n",
-    "    print(\"j - \", j)\n",
-    "    instance = parameters[j]  \n",
-    "    scores = []\n",
-    "    for i in range(1,5):\n",
-    "        print(i)\n",
-    "        x = scale(df.loc[df['test'] == i].iloc[:,:-2])\n",
-    "        y = df.loc[df['test'] == i].iloc[:,-2]\n",
-    "        scores.append(instance.score(x,y))\n",
-    "        print(scores)\n",
-    "    if mean(scores) > score:\n",
-    "        score = mean(scores)\n",
-    "        best_params = parameters[j]\n",
-    "print(score)"
+    "Tried 10% of the data but still took longer than 1 hour, so gave up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63528cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.sample(frac=0.1)"
    ]
   }
  ],
