--- a/Adam_Evidence/Dynamic Topic Model.ipynb
+++ b/Adam_Evidence/Dynamic Topic Model.ipynb
@@ -7,13 +7,12 @@
    "source": [
     "# Dynamic Topic Model\n",
     "\n",
-    "A dynamic topic model is \n",
-    "we thought that this would be good to use because"
+    "A dynamic topic model is group of models that can be used to analyse the change in topics over time. This is done by giving the topic distribution ($\\beta$) has a certain distribution that changes over time. we thought that this would be a good approach because we would be able to analyse the change in the topics by just looking at the distribution of the topic distribution parameter. We decided that the best way to implement this is using the ldaseqmodel as this allowed us to easily model the data and then analyse the parameters. This model is based on Dynamic Topic Models by Blei et al."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d43881ff",
    "metadata": {},
    "outputs": [],
@@ -284,7 +283,7 @@
    "id": "850af1b9",
    "metadata": {},
    "source": [
-    "Converts Description from string to list"
+    "We found that the way that we saved the data frame, meant that the Description column was read as a string rather than a list as it was intended. Therefore, we had to apply the function literal_eval which allows us to convert the string of a stored list into a python list. We then separate the description column into a list to allow easier access. "
    ]
   },
   {
@@ -305,6 +304,14 @@
    "outputs": [],
    "source": [
     "desc = df['Description']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53944bf7",
+   "metadata": {},
+   "source": [
+    "Here we create a dictionary of words that occur in the corpus that allow us to index each of these words. We also format the corpus into a matrix which indicates how many times each word occurs in each document. "
    ]
   },
   {
@@ -370,15 +377,7 @@
    "id": "95e6dfaf",
    "metadata": {},
    "source": [
-    "To create an lda sequence model we need to count the number of documents in each year.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e827abf9",
-   "metadata": {},
-   "source": [
-    "We will use that the year of the vulnerability is the 4-8 characters of each of the CVE names. Therefore, we will extract these and count the instances for each one."
+    "To create an LDA sequence model we need to count the number of documents in each year. We will use that the year of the vulnerability is the 4-8 characters of each of the CVE names. Therefore, we will extract these and count the instances for each one."
    ]
   },
   {
@@ -400,9 +399,12 @@
     "year = []\n",
     "for instance in names:\n",
     "    year.append(int(instance[4:8]))\n",
-    "year_count = []\n",
+    "year_count = [0]\n",
     "for i in range(23):\n",
-    "    year_count.append(year.count(i+1999))\n",
+    "    if i == 0:\n",
+    "        year_count.append(year.count(i+1999))\n",
+    "    else:\n",
+    "        year_count.append(year.count(i+1999) + year_count[i]) \n",
     "print(year_count)"
    ]
   },
@@ -411,7 +413,7 @@
    "id": "a554d303",
    "metadata": {},
    "source": [
-    "See how the chain variance affects things?"
+    "Here we train the model on the formatted data. However, after running for more than 24 hours, it still had not finished, therefore we tried on 10% of the documents, however this took longer than an hour and so we decided that we would try a different approach."
    ]
   },
   {
@@ -459,14 +461,6 @@
    "outputs": [],
    "source": [
     "ldaseq.print_topics(time=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e57f379",
-   "metadata": {},
-   "source": [
-    "Tried 10% of the data but still took longer than 1 hour, so gave up."
    ]
   },
   {
