--- a/Adam_Evidence/04 - LDA on Independent Years.ipynb
+++ b/Adam_Evidence/04 - LDA on Independent Years.ipynb
@@ -371,6 +371,8 @@
    "id": "1a9b797f",
    "metadata": {},
    "source": [
+    "### Model Training using CV\n",
+    "\n",
     "After trying to find an optimal number of topics, we decided to use 50 as this is what was used in Analyzing Evolving Trends of Vulnerabilities in National Vulnerability Database by Williams et al., which is what provided us the idea for this project. We did a 6-Fold cross validation on each year as this helps to ensure that we don't overfit and so helps provide a better overview of how the topics change over time. "
    ]
   },
@@ -406,12 +408,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6acc0d08",
+   "cell_type": "markdown",
+   "id": "f504d0e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The below was created for Bill to use on his model."
+   ]
   },
   {
    "cell_type": "code",
@@ -443,6 +445,156 @@
     "    if temp_coherence > coherence:\n",
     "        model = temp_model\n",
     "        coherence = temp_coherence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc3b4da",
+   "metadata": {},
+   "source": [
+    "### Topic matching between years\n",
+    "\n",
+    "Tried this implementation but did not work, accoriding to an issue reported on the Github, this is because there are too many nodes, so I will use a different implementation of the Hungarian algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a38720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install hungarian-algorithm\n",
+    "from hungarian-algorithm import algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ecac74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#used to extract the top 50 words in each topic and return a list of topics containing the list of 50 words\n",
+    "def extract_Words(model): \n",
+    "    topics=[]\n",
+    "    topic_index=[]\n",
+    "    for words in model.show_topics(num_topics = 50, num_words = 50, formatted=False):\n",
+    "        (a,b) = words #removes the index\n",
+    "        word=[]\n",
+    "        for j in b:\n",
+    "            (c,d) = j #extracts the word from the (word, probability) tuple\n",
+    "            word.append(c)\n",
+    "        topics.append(word)\n",
+    "        topic_index.append(int(a))\n",
+    "    return (topics,topic_index)\n",
+    "\n",
+    "#Creates a dictionary of jaccard scores\n",
+    "#Requires topics1 and topics2 to have 50 topics in each\n",
+    "def graphify(topics1, topics2):\n",
+    "    G = {}\n",
+    "    for i in range(50):\n",
+    "        jaccard_dict = {}\n",
+    "        for j in range(50):\n",
+    "            jaccard_dict[j+50] = jaccard_score(topics1[i],topics2[j],average='macro')\n",
+    "        G[i] = jaccard_dict\n",
+    "        print(jaccard_dict)\n",
+    "    return G\n",
+    "\n",
+    "#find best match between topic-sets and change topic-set 2 numbering to replicate topic-set 1.\n",
+    "def match_sets(G,index1):\n",
+    "    matching = algorithm.find_matching(G, matching_type = 'max', return_type = 'list')\n",
+    "    new_index2=[]*50\n",
+    "    for i in range(50):\n",
+    "        (a,b) = matching[i]\n",
+    "        (c,d) = a\n",
+    "        new_index2[d-50]=index1[c] \n",
+    "    return new_index2\n",
+    "\n",
+    "topicWords=[]\n",
+    "indices=[]\n",
+    "for i in range(23):\n",
+    "    (topics, indexes) = extract_Words(ldamodels[i])\n",
+    "    topicWords.append(topics)\n",
+    "    indices.append(indexes)\n",
+    "topic_map = [Indices[0]]\n",
+    "for i in range(22):\n",
+    "    G = graphify(topicWords[i],topicWords[i+1])\n",
+    "    next_topic_index = match_sets(G,indices[i])\n",
+    "    topic_map.append(next_topic_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cd6ed52",
+   "metadata": {},
+   "source": [
+    "We now need to correlate the topics from each year to eachother. This is important for our analysis as the topic labelled 27 in year 1999 could be related to DDoS vulnerabilities, while this could be labelled as 9 in year 2000. Therefore, we need to correlate all the topics so we can see how the proportions of the same topic changes. To do this we are going to use a Jaccard similarity to work out how similar a topic from year i compares to each of the topics in year i+1. We then create a matrix of this and solve the matching problem that maximises the similarity of the topics between years. To do this we use the linear_sum_assignment function to solve this efficiently. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1508a4fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#used to extract the top 500 words in each topic and return a list of topics containing the list of 500 words\n",
+    "def extract_Words(model): \n",
+    "    topics=[]\n",
+    "    topic_index=[]\n",
+    "    for words in model.show_topics(num_topics = 50, num_words = 500, formatted=False):\n",
+    "        (a,b) = words #removes the index\n",
+    "        word=[]\n",
+    "        for j in b:\n",
+    "            (c,d) = j #extracts the word from the (word, probability) tuple\n",
+    "            word.append(c)\n",
+    "        topics.append(word)\n",
+    "        topic_index.append(int(a))\n",
+    "    return (topics,topic_index)\n",
+    "\n",
+    "#Creates a matrix of the Jaccard scores\n",
+    "#Requires topics1 and topics2 to have 50 topics in each\n",
+    "def calculate_cost(topics1, topics2):\n",
+    "    cost = []\n",
+    "    for i in range(50):\n",
+    "        jaccard = []\n",
+    "        for j in range(50):\n",
+    "            jaccard.append(jaccard_score(topics1[i],topics2[j],average='macro'))\n",
+    "        cost.append(jaccard) \n",
+    "    return cost\n",
+    "\n",
+    "#find best match between topic-sets and change topic-set 2 numbering to replicate topic-set 1.\n",
+    "def match_sets(cost,index1):\n",
+    "    row_ind, col_ind = linear_sum_assignment(cost)\n",
+    "    new_index2=[0]*50\n",
+    "    for i in range(50):\n",
+    "        new_index2[col_ind[i]]=index1[row_ind[i]] \n",
+    "    return new_index2\n",
+    "\n",
+    "topicWords=[]\n",
+    "indices=[]\n",
+    "for i in range(23):\n",
+    "    (topics, indexes) = extract_Words(ldamodels[i])\n",
+    "    topicWords.append(topics)\n",
+    "    indices.append(indexes)\n",
+    "topic_map = [Indices[0]]\n",
+    "for i in range(22):\n",
+    "    cost = calculate_cost(topicWords[i],topicWords[i+1])\n",
+    "    if i == 0:\n",
+    "        print(cost[0])\n",
+    "    next_topic_index = match_sets(cost,indices[i])\n",
+    "    topic_map.append(next_topic_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e89cc0",
+   "metadata": {},
+   "source": [
+    "Originally, we looked at the top 50 words from each topic, however we found that the jaccard scores were very low and many were 0. Therefore, we decided to increase the number of words to 500 as we thought that this would provide enough words to compare, while allowing us to compute in a reasonable time. As you can see from the output (which is the Jaccard scores for topic\\[0\\] in year 1999 compared to each of the topics in year 2000), this did not have as much of an effect as we had hoped. It is clear from the output that there is very little correlation between topics generated from the LDA model in each year. It is possible that it is showing that there is a very great change between the different vulnerabilties reported in each year, however we believe it is much more likely that it is a poor model that we have created. Therefore, we have decided that this approach does not provide a useful result that we can use to analyse the change of vulnerability types over time. \n",
+    "\n",
+    "It would have been nice to have come up with a similarity measure that took into consideration the probabilities of each word occuring in a topic, however we did not have time to implement this. "
    ]
   }
  ],
