Independent Year Model

--- a/Report/04 - LDA on Independent Years.ipynb
+++ b/Report/04 - LDA on Independent Years.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "d43881ff",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,9 @@
     "from ast import literal_eval\n",
     "from gensim.models.coherencemodel import CoherenceModel\n",
     "from sklearn.model_selection import KFold\n",
-    "import statistics"
+    "import statistics\n",
+    "from sklearn.metrics import jaccard_score\n",
+    "from scipy.optimize import linear_sum_assignment"
    ]
   },
   {
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "e5779e21",
    "metadata": {},
    "outputs": [
@@ -406,43 +408,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6acc0d08",
+   "cell_type": "markdown",
+   "id": "d006ebff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We now save the models so that we do not have to run the code everytime and can access them from other notepads."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb20b6a3",
+   "execution_count": 50,
+   "id": "6acc0d08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#THIS IS TO BE USED FOR THE CV FOR LDA ON THE WHOLE DATA SET\n",
+    "with open('../data/processed/indepLDAmodels.pickle','wb') as f:\n",
+    "    pickle.dump(ldamodels,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cc56d65",
+   "metadata": {},
+   "source": [
+    "We now need to correlate the topics from each year to eachother. This is important for our analysis as the topic labelled 27 in year 1999 could be related to DDoS vulnerabilities, while this could be labelled as 9 in year 2000. Therefore, we need to correlate all the topics so we can see how the proportions of the same topic changes. To do this we are going to use a Jaccard similarity to work out how similar a topic from year i compares to each of the topics in year i+1. We then create a matrix of this and solve the matching problem that maximises the similarity of the topics between years. To do this we use the linear_sum_assignment function to solve this efficiently. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ae25b029",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0014641288433382138, 0.002962962962962963, 0.0014792899408284023, 0.0, 0.007530120481927711, 0.004477611940298508, 0.004213483146067416, 0.005805515239477504, 0.0, 0.0045871559633027525, 0.004615384615384616, 0.0031201248049922, 0.0, 0.008559201141226819, 0.0013351134846461949, 0.006230529595015576, 0.0, 0.0, 0.0, 0.005988023952095809, 0.0014577259475218659, 0.004531722054380665, 0.0040595399188092015, 0.0, 0.0013351134846461949, 0.0, 0.013803680981595092, 0.0015552099533437014, 0.0046801872074883, 0.003947368421052632, 0.0014947683109118087, 0.0057306590257879654, 0.013119533527696793, 0.0029850746268656717, 0.006172839506172839, 0.002967359050445104, 0.0014144271570014145, 0.0, 0.0015600624024961, 0.008344923504867872, 0.006201550387596899, 0.0014727540500736377, 0.006153846153846154, 0.0014814814814814814, 0.0046875, 0.04251968503937008, 0.0, 0.004195804195804196, 0.001440922190201729, 0.0031746031746031746]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#used to extract the top 500 words in each topic and return a list of topics containing the list of 500 words\n",
+    "def extract_Words(model): \n",
+    "    topics=[]\n",
+    "    topic_index=[]\n",
+    "    for words in model.show_topics(num_topics = 50, num_words = 500, formatted=False):\n",
+    "        (a,b) = words #removes the index\n",
+    "        word=[]\n",
+    "        for j in b:\n",
+    "            (c,d) = j #extracts the word from the (word, probability) tuple\n",
+    "            word.append(c)\n",
+    "        topics.append(word)\n",
+    "        topic_index.append(int(a))\n",
+    "    return (topics,topic_index)\n",
     "\n",
-    "vocab = gensim.corpora.Dictionary(desc)\n",
-    "doc_word_matrix_array = []\n",
+    "#Creates a matrix of the Jaccard scores\n",
+    "#Requires topics1 and topics2 to have 50 topics in each\n",
+    "def calculate_cost(topics1, topics2):\n",
+    "    cost = []\n",
+    "    for i in range(50):\n",
+    "        jaccard = []\n",
+    "        for j in range(50):\n",
+    "            jaccard.append(jaccard_score(topics1[i],topics2[j],average='macro'))\n",
+    "        cost.append(jaccard) \n",
+    "    return cost\n",
+    "\n",
+    "#find best match between topic-sets and change topic-set 2 numbering to replicate topic-set 1.\n",
+    "def match_sets(cost,index1):\n",
+    "    row_ind, col_ind = linear_sum_assignment(cost)\n",
+    "    new_index2=[0]*50\n",
+    "    for i in range(50):\n",
+    "        new_index2[col_ind[i]]=index1[row_ind[i]] \n",
+    "    return new_index2\n",
+    "\n",
+    "topicWords=[]\n",
+    "indices=[]\n",
     "for i in range(23):\n",
-    "    doc_word_matrix_array.append([vocab.doc2bow(doc) for doc in desc[year_count[i]:year_count[i+1]]]) \n",
+    "    (topics, indexes) = extract_Words(ldamodels[i])\n",
+    "    topicWords.append(topics)\n",
+    "    indices.append(indexes)\n",
+    "topic_map = [Indices[0]]\n",
+    "for i in range(22):\n",
+    "    cost = calculate_cost(topicWords[i],topicWords[i+1])\n",
+    "    if i == 0:\n",
+    "        print(cost[0])\n",
+    "    next_topic_index = match_sets(cost,indices[i])\n",
+    "    topic_map.append(next_topic_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52cb45b",
+   "metadata": {},
+   "source": [
+    "Originally, we looked at the top 50 words from each topic, however we found that the jaccard scores were very low and many were 0. Therefore, we decided to increase the number of words to 500 as we thought that this would provide enough words to compare, while allowing us to compute in a reasonable time. As you can see from the output (which is the Jaccard scores for topic\\[0\\] in year 1999 compared to each of the topics in year 2000), this did not have as much of an effect as we had hoped. It is clear from the output that there is very little correlation between topics generated from the LDA model in each year. It is possible that it is showing that there is a very great change between the different vulnerabilties reported in each year, however we believe it is much more likely that it is a poor model that we have created. Therefore, we have decided that this approach does not provide a useful result that we can use to analyse the change of vulnerability types over time. \n",
     "\n",
-    "\n",
-    "kf = KFold(n_splits=6, random_state=27, shuffle=True)\n",
-    "train=[[] * 6] \n",
-    "test=[[] * 6]\n",
-    "for i in range(23): # For each year work out the CV split and combine all of the years into one big test and train dataset\n",
-    "    j=0\n",
-    "    for split in kf.split(desc[year_count[i]:year_count[i+1]]):\n",
-    "        train[j].extend([vocab.doc2bow(doc) for doc in desc[split[0]]])\n",
-    "        test[j].extend([vocab.doc2bow(doc) for doc in desc[split[1]]])\n",
-    "        j += j      \n",
-    "for j in range(6):\n",
-    "    temp_model = LDA(corpus=train[j], id2word=vocab, passes = 3, num_topics = 50) #Traing model here \n",
-    "    temp_coherence = CoherenceModel(model=model, corpus=test[j], dictionary=vocab, coherence='u_mass').get_coherence()\n",
-    "    if temp_coherence > coherence:\n",
-    "        model = temp_model\n",
-    "        coherence = temp_coherence"
+    "It would have been nice to have come up with a similarity measure that took into consideration the probabilities of each word occuring in a topic, however we did not have time to implement this. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6480a1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/processed/topicMap.pickle','wb') as f:\n",
+    "    pickle.dump(topic_map,f)"
    ]
   }
  ],
