--- a/Report/01-Introduction.ipynb
+++ b/Report/01-Introduction.ipynb
@@ -14,7 +14,7 @@
     "* Learn the performance of the models\n",
     "* Use the results of the models to evaluate the question\n",
     "\n",
-    "We first chose the data that we would work with, as finding a dataset that was suitable was going to be the main problem. For this we will use a CVE database, which is a collection of all reported common vulnerability and exploits with a short description about what each is about. We will look into how the nature of the CVEs have changed over time by analysing the descriptions. The Models we will use are LDA and ... . As both of these are unsupervised it is hard to analyse their performance, however we can look at how they have grouped the terms and evaluate them. We will also compare the two models to see how their results differ. \n",
+    "We first chose the data that we would work with, as finding a suitable dataset was going to be the main problem. For this we will use a CVE database, which is a collection of all reported common vulnerability and exploits with a short description about what each is about. We will look into how the nature of the CVEs have changed over time by analysing the descriptions. The Models we will using an LDA model but under different training conditions. As these are unsupervised, it is hard to analyse their performance, however we can look at how they have grouped the terms and evaluate them. We will also compare the models to see how their results differ. \n",
     "\n",
     "## Library requirements\n"
    ]
@@ -100,8 +100,6 @@
    "source": [
     "## The data\n",
     "\n",
-    "We\n",
-    "\n",
     "To obtain this dataset in a convenient format, we will download it and, if necessary, process it into a standard form.\n",
     "\n",
     "We place data in the raw or processed folder depending on the stage of processing, both of which are in the `data` folder of our root. So our file system will look like this:\n",
@@ -110,7 +108,9 @@
     "  * /data/raw\n",
     "      * allitems.csv\n",
     "  * /data/processed\n",
-    "      * \n",
+    "      * formatted_df.csv\n",
+    "      * indepLDAmodels.pickle\n",
+    "      * topicMap.pickle\n",
     "\n",
     "### Get the data"
    ]
