Small changes to readme and 02, no code changes

--- a/Report/02-Pre-Processing.ipynb
+++ b/Report/02-Pre-Processing.ipynb
@@ -536,7 +536,7 @@
    "id": "456f5f8a",
    "metadata": {},
    "source": [
-    "We can therefore generate produce a sparser representation (I call it `desc2`) of our descriptions than `desc1` if we want to. We see that it gets rid of stuff like `\"via\"`."
+    "We can therefore generate produce a sparser representation (I call it `desc2`) of our descriptions than `desc1` if we want to. We see that it gets rid of words like `\"via\"`."
    ]
   },
   {
